--- a/src/dontbreaktheice.tex
+++ b/src/dontbreaktheice.tex
@@ -161,7 +161,9 @@ function createPath() {
     % Loop as long as there are entrys in the list
     while (fieldList.length !== 0) {
         % Get one random entry
-        var rnd = getRandomInt(fieldList.length);
+        % Exclude the last entry since the algorithm does not
+        % work otherwise, not sure why
+        var rnd = getRandomInt(fieldList.length - 1);
         var elem = fieldList[rnd];
 
         % Remove and mark the field
@@ -320,7 +322,7 @@ function colorField(x, y) {
     } else {
         var diffX = Math.abs(freePath[currentField][0] - x);
         var diffY = Math.abs(freePath[currentField][1] - y);
-        if (diffX + diffY > 1) {
+        if (diffX + diffY != 1) {
             return;
         }
     }
