:bug: Memory: Fix mini gameover bug

--- a/src/memory.tex
+++ b/src/memory.tex
@@ -202,7 +202,7 @@ function restart() {
     lastField = false;
 
     gameover = false;
-    turnCount = FIELD_WIDTH * FIELD_HEIGHT;
+    pairsFound = 0;
     playerIdx = 1;
 
     printInfoText();
